# floy

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: Releases.yml
android/app/: build.gradle
ci/: Cargo.toml
ci/src/: define.rs  main.rs
integration_test/: simple_test.dart
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: cross.dart  main.dart
lib/screens/: app_screen.dart  init_screen.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: bbs.rs  fuli.rs  init.rs  mod.rs  user_center.rs
rust/src/client/: mod.rs  tests.rs  types.rs  utils.rs
rust/src/client/community/: dataobject.rs  mod.rs  tests.rs
rust/src/client/fuli/: dataobject.rs  mod.rs  tests.rs
rust/src/client/user_center/: dataobject.rs  mod.rs  tests.rs
rust/src/commons/: logger.rs  mod.rs  utils.rs
rust/src/database/: commons.rs  mod.rs
rust/src/database/active/: cookie.rs  mod.rs  property.rs
rust/src/database/cache/: mod.rs  web_cache.rs
rust/src/domain/: cookie_jar.rs  defines.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_floy.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_floy.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+31 files in other folders)
