[package]
name = "rust_lib_floy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
flutter_rust_bridge = "=2.0.0-dev.28"
hex = "0.4.3"
md5 = "0.7.0"
reqwest = { version = "0.11.26", default-features = false, features = ["tokio-rustls", "rustls", "rustls-tls"] }
sea-orm = { version = "0.12.15", default-features = false, features = ["sqlx-sqlite", "macros", "runtime-tokio-rustls"] }
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
serde_path_to_error = "0.1.16"
sha1 = "0.10.6"
sha2 = "0.10.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
log = "0.4.20"
cookie = "0.18.0"
tokio = { version = "1.36.0", features = ["fs", "rt", "net", "sync", "tracing"] }
base64 = "0.21.7"
once_cell = "1.18.0"
lazy_static = "1.4.0"
bytes = "1.5.0"
url = "2.5.0"
hyper = "0.14.28"
async-trait = "0.1.78"
anyhow = "1.0.75"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }
